# zkme-contract-sol

./: .gitignore  Anchor.toml  README.md  package.json
programs/zkme-sol/: Cargo.toml
programs/zkme-sol/src/: account_info.rs  error.rs  lib.rs  state.rs
programs/zkme-sol/src/account_info/: approve_operator.rs  approve_sbt.rs  approve_sbt_lite.rs  burn_sbt.rs  create_admin.rs  create_conf.rs  create_kyc.rs  mint_sbt.rs  revoke_operator.rs  revoke_sbt.rs  revoke_sbt_lite.rs  update_conf.rs  update_kyc.rs
programs/zkme-sol/src/state/: admin.rs  conf.rs  kyc.rs
tests/: zkme-sol.ts
