[package]
name = "zkme-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkme_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
